# sml_rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Cross.toml  DEPLOYMENT.md  README.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
doc/: architecture.md  config.md  module.md
src/: config.rs  main.rs  model.rs  mqtt.rs  rrd.rs  sml.rs  web.rs
static/: app.js  index.html  style.css
tools/: Dockerfile.aarch64  Dockerfile.armv7  gra.py  sml.service  socat_net.sh
