[package]
name = "sml_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.10"
serialport = "4.8"
rumqttc = "0.25"
axum = "0.8"
tokio-stream = {version = "0.1", features = ["sync"]}
bytes = "1"
chrono = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive", "env"] }
sml-rs= "0.4"
rrd = "*"
tower-http = { version = "0.6", features = ["fs"] }

[patch.crates-io]
rrd = { path = "vendor/rrd" }
